@@ -1,5 +1,7 @@
 # To be released:
 
+- Use AttachmentsHelper to validate imageUrl instead of just url.
+
 # 1.16.6 - Fri 9th of Oct 2020
 - Add `createdLocallyAt` and `updatedLocallyAt` properties to `Message` type
 - Add AttachmentsHelper with hasValidUrl method
